# api/dist/swagger.json
@@ -5,9 +5,10 @@
         "version": "1.0.0"
     },
     "host": "localhost:4009",
-    "basePath": "/chat_bot/api/v1/user",
+    "basePath": "/chat_bot/api/v1",
     "consumes": [
-        "application/json"
+        "application/json",
+        "application/x-www-form-urlencoded"
     ],
     "produces": [
         "application/json"
@@ -15,8 +16,18 @@
     "schemes": [
         "http"
     ],
+    "tags": [
+        {
+            "name": "user",
+            "description": "user api"
+        },
+        {
+            "name": "admin",
+            "description": "admin api"
+        }
+    ],
     "paths": {
-        "/login": {
+        "/user/login": {
             "post": {
                 "summary": "Authenticating user",
                 "parameters": [
@@ -60,7 +71,7 @@
                 }
             }
         },
-        "/register": {
+        "/user/register": {
             "post": {
                 "summary": "Register new user",
                 "parameters": [
@@ -124,6 +135,52 @@
                     },
                     "400": {
                         "description": "Please fill all required fields and try again.",
+                        "schema": {
+                            "type": "object",
+                            "properties": {
+                                "responseCode": {
+                                    "type": "string"
+                                },
+                                "responseMessage": {
+                                    "type": "string"
+                                }
+                            }
+                        }
+                    }
+                }
+            }
+        },
+        "/user/currentUser": {
+            "get": {
+                "summary": "Reterieve User Details.",
+                "parameters": [
+                    {
+                        "name": "authorization",
+                        "in": "header",
+                        "required": true,
+                        "type": "string"
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "Sucessfully get user details.",
+                        "schema": {
+                            "type": "object",
+                            "properties": {
+                                "responseCode": {
+                                    "type": "string"
+                                },
+                                "responseMessage": {
+                                    "type": "string"
+                                },
+                                "userProfile": {
+                                    "type": "object"
+                                }
+                            }
+                        }
+                    },
+                    "400": {
+                        "description": "Access Forbidden.",
                         "schema": {
                             "type": "object",
                             "properties": {
