# lib/user/userRoute.js
@@ -40,6 +40,12 @@ usrRoutr.route("/login")
     });
 
 
+usrRoutr.route("/currentUser").get((req,res)=>{
+    usrFacade.currentUser(req)
+        .then(result=> resHndlr.sendSuccess(res,result))
+    .catch(err =>  resHndlr.sendError(res, err));
+});
+
 // usrRoutr.route("/getUserProfile")
 //     .post([middleware.authenticate.autntctTkn], function (req, res) {
 //           let { user } = req;
